# PulseVision

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SPEC.md
docs/: 01-PRD.md  02-SRS.md  03-Architecture.md  04-Data-Model.md  05-API-Spec.md  06-UI-UX.md  07-Security.md  08-Testing.md  09-Deployment.md  10-Observability.md  11-Performance.md  12-Backlog.md  13-Project-Plan.md  14-Team-Onboarding.md  15-Maintenance.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/flow/: DetailPanel.tsx  FlowCanvas.tsx
frontend/src/components/flow/nodes/: AgentNode.tsx  ExperienceNode.tsx  LlmCallNode.tsx  ToolCallNode.tsx
frontend/src/components/shared/: CollectiveSelector.tsx  ConnectionStatus.tsx  Toolbar.tsx
frontend/src/components/space/: AttractorFields.tsx  ExperienceCloud.tsx  FilterPanel.tsx  HoverLabel.tsx  RelationLines.tsx  SpaceCanvas.tsx  SpaceDetailPanel.tsx
frontend/src/hooks/: useApi.ts  useSubstrate.ts  useWebSocket.ts
frontend/src/stores/: eventStore.ts  spaceStore.ts  types.ts  uiStore.ts
frontend/src/stores/__tests__/: eventStore.test.ts  spaceStore.test.ts  uiStore.test.ts
frontend/src/styles/: flow-animations.css  globals.css  react-flow.css
pulsevision/: Cargo.toml
pulsevision-cli/: Cargo.toml
pulsevision-cli/src/: main.rs
pulsevision-client/: Cargo.toml
pulsevision-client/src/: lib.rs
pulsevision/src/: config.rs  error.rs  lib.rs  state.rs
pulsevision/src/api/: attractors.rs  mod.rs  projections.rs  substrate.rs
pulsevision/src/db/: mod.rs  reader.rs
pulsevision/src/session/: mod.rs  sqlite.rs
pulsevision/src/ws/: events.rs  mod.rs  substrate.rs
pulsevision/tests/: create_fixture.rs  integration_test.rs
