[workspace]
resolver = "2"
members = [
    "pulsevision",
    "pulsevision-cli",
    "pulsevision-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "AGPL-3.0-only"
repository = "https://github.com/draco28/PulseVision"

[workspace.dependencies]
# Pulse ecosystem
pulsehive-db = { version = "0.4", features = ["builtin-embeddings"] }
pulsehive-core = { version = "2.0" }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower = { version = "0.5", features = ["util"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Math
nalgebra = "0.33"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }

# Utilities
uuid = { version = "1", features = ["v7", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"

# Testing
tempfile = "3"
