[package]
name = "pulsevision-cli"
description = "Standalone PulseVision server for local agent observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "pulsevision"
path = "src/main.rs"

[dependencies]
pulsevision = { path = "../pulsevision", features = ["sqlite"] }
pulsehive-db = { workspace = true }
tokio.workspace = true
axum.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
anyhow = "1"
