[package]
name = "pulsevision-client"
description = "WebSocket exporter for connecting PulseHive to PulseVision"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pulsehive-core.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures-util.workspace = true
