[package]
name = "pulsevision"
description = "Real-time observability and visualization for PulseHive multi-agent systems"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pulsehive-db.workspace = true
pulsehive-core.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower.workspace = true
serde.workspace = true
serde_json.workspace = true
nalgebra.workspace = true
uuid.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures-util.workspace = true

# Optional storage backends
rusqlite = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
pulsehive = { version = "2.0", features = ["openai"] }
pulsehive-openai = "2.0"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
tower = { workspace = true, features = ["util"] }
axum = { workspace = true }
hyper = "1"
http-body-util = "0.1"

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
postgres = ["dep:sqlx"]
